

[package]
name = "home_back"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"
futures = "0.3"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
actix-web = "3.3"
actix-rt = "1.1"
serde = "1.0"
serde_json = "1.0"