[package]
name = "home_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream", "blocking"] }
actix-web = "4.3"
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["serde", "v4"] }
regex = "1.7"
itertools = "0.10"
futures = "0.3"
systemstat = "0.2.3"